--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.0",
+        "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
+        "mysql2": "^2.3.3",
         "nodemon": "^2.0.16",
+        "sequelize": "^6.20.1",
         "tinymce": "^6.0.3"
     }
 }
