--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "alert": "^5.0.12",
         "body-parser": "^1.20.0",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
-        "mysql2": "^2.3.3",
+        "mongoose": "^6.4.0",
         "nodemon": "^2.0.16",
-        "sequelize": "^6.20.1",
         "tinymce": "^6.0.3"
     }
 }
