--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "license": "ISC",
     "dependencies": {
         "alert": "^5.0.12",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
+        "connect-mongodb-session": "^3.1.1",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
+        "express-session": "^1.17.3",
         "mongoose": "^6.4.0",
         "nodemon": "^2.0.16",
         "tinymce": "^6.0.3"
