--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
         "body-parser": "^1.20.0",
         "connect-flash": "^0.1.1",
         "connect-mongodb-session": "^3.1.1",
+        "crypto-random-string": "^5.0.0",
         "csurf": "^1.11.0",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "mongoose": "^6.4.0",
+        "nodemailer": "^6.7.5",
+        "nodemailer-mandrill-transport": "^1.2.0",
         "nodemon": "^2.0.16",
+        "request": "^2.88.2",
         "tinymce": "^6.0.3"
     }
 }
