--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "alert": "^5.0.12",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
+        "cloudinary": "^1.30.1",
         "connect-flash": "^0.1.1",
         "connect-mongodb-session": "^3.1.1",
         "crypto-random-string": "^5.0.0",
